@@ -1,0 +1,13 @@
+STATISTICS
+  Problem name     : seed
+  Variables        : 2 (0 binary, 1 integer, 0 implicit integer, 1 continuous)
+  Constraints      : 0 initial, 2 maximal
+OBJECTIVE
+  Sense            : minimize
+VARIABLES
+  [integer] <x3>: obj=1, original bounds=[0,+inf]
+  [continuous] <x5>: obj=0, original bounds=[0,+inf]
+CONSTRAINTS
+  [linear] <_C1>:  +5<x3>[I] -51<x5>[C] >= 0;
+  [linear] <_C2>:  -69.93<x3>[I] +80.45<x5>[C] >= 3004.82;
+END
